# TPGame

./: README.md  architecture
project/: CMakeLists.txt  main.cpp
project/Army/: Army.cpp  Army.h  CMakeLists.txt  Detachment.cpp  Detachment.h
project/Emlpoyment/: Beat.cpp  Beat.h  CMakeLists.txt  Command.h  Communication.cpp  Communication.h  Defend.cpp  Defend.h  Hostilities.cpp  Hostilities.h  ProxyCommunication.cpp  ProxyCommunication.h  ProxyWar.cpp  ProxyWar.h  War.cpp  War.h
project/Factories/: CMakeLists.txt  FactoryBlack.cpp  FactoryBlack.h  FactoryUnit.cpp  FactoryUnit.h  FactoryWhite.cpp  FactoryWhite.h
project/Units/: BlackElf.cpp  BlackElf.h  BlackGiant.cpp  BlackGiant.h  BlackWizard.cpp  BlackWizard.h  CMakeLists.txt  Elf.h  Giant.cpp  Giant.h  Unit.h  WhiteElf.cpp  WhiteElf.h  WhiteGiant.cpp  WhiteGiant.h  WhiteWizard.cpp  WhiteWizard.h  Wizard.h
